processed output data

--- a/Gold Prediction/linear_regression.ipynb
+++ b/Gold Prediction/linear_regression.ipynb
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 21.2 s\n"
+      "Wall time: 19.1 s\n"
      ]
     }
    ],
@@ -121,6 +121,20 @@
    "outputs": [],
    "source": [
     "sub.to_csv('output.csv',index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## output processing\n",
+    "preds[preds<0.5] = 0\n",
+    "abb = pd.DataFrame(preds)\n",
+    "abb[(abb[0]>0) & (abb[0]<1)] = 0.99\n",
+    "sub = pd.DataFrame({'user_id':test_df.user_id,'prediction_pay_price': abb[0]},columns=['user_id','prediction_pay_price'])\n",
+    "sub.to_csv('output_processed.csv',index=None)"
    ]
   }
  ],
