--- a/Gold Prediction/multimodel_regression.ipynb
+++ b/Gold Prediction/multimodel_regression.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 20.8 s\n"
+      "Wall time: 21.6 s\n"
      ]
     }
    ],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,24 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
     "x_train = scaler.fit_transform(train_df)\n",
-    "x_test = scaler.transform(test_df)"
+    "test_scale = scaler.transform(test_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.model_selection import train_test_split\n",
-    "# x_train, x_test, y_train, y_test = train_test_split(train_df, y, test_size = 0.2)"
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(train_df, y, test_size = 0.1)"
    ]
   },
   {
@@ -83,14 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 18.7 s\n"
+      "Loss: 0.4152026871068508\n",
+      "Wall time: 22 s\n"
      ]
     }
    ],
@@ -98,36 +99,9 @@
     "%%time\n",
     "from sklearn.linear_model import LinearRegression\n",
     "reg = LinearRegression()\n",
-    "reg.fit(x_train, y)\n",
-    "preds = reg.predict(test_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ElasticNet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 1min 1s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "from sklearn.linear_model import ElasticNet\n",
-    "reg = ElasticNet()\n",
-    "reg.fit(x_train, y)\n",
-    "preds = reg.predict(x_test)"
+    "reg.fit(x_train, y_train)\n",
+    "# preds = reg.predict(test_df)\n",
+    "print('Loss: {}'.format(reg.score(x_test,y_test)))"
    ]
   },
   {
@@ -139,23 +113,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 3.48 s\n"
+      "Wall time: 5 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "from sklearn.linear_model import Ridge\n",
-    "reg2 = Ridge(alpha=1.0)\n",
-    "reg2.fit(x_train, y)\n",
-    "preds = reg2.predict(x_test)"
+    "reg2 = Ridge(alpha=3,normalize=True)\n",
+    "reg2.fit(x_train, y_train)\n",
+    "preds = reg2.predict(x_test)\n",
+    "# print('Loss: {}'.format(reg2.score(x_test,y_test)))"
    ]
   },
   {
@@ -167,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,12 +151,12 @@
     "abb = pd.DataFrame(preds)\n",
     "abb[(abb[0]>0) & (abb[0]<1)] = 0.99\n",
     "sub = pd.DataFrame({'user_id':test_df.user_id,'prediction_pay_price': abb[0]},columns=['user_id','prediction_pay_price'])\n",
-    "sub.to_csv('output_processed_Ridge.csv',index=None)"
+    "sub.to_csv('output_processed_RF.csv',index=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -213,17 +188,17 @@
        "    <tr>\n",
        "      <th>count</th>\n",
        "      <td>8.289340e+05</td>\n",
-       "      <td>828934.000000</td>\n",
+       "      <td>228801.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
        "      <td>1.811513e+06</td>\n",
-       "      <td>3.239284</td>\n",
+       "      <td>2.166593</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
        "      <td>8.229500e+05</td>\n",
-       "      <td>85.946625</td>\n",
+       "      <td>56.351862</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -243,12 +218,12 @@
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>2.481669e+06</td>\n",
-       "      <td>0.990000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>3.176543e+06</td>\n",
-       "      <td>45919.468251</td>\n",
+       "      <td>8628.335578</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -256,23 +231,43 @@
       ],
       "text/plain": [
        "            user_id  prediction_pay_price\n",
-       "count  8.289340e+05         828934.000000\n",
-       "mean   1.811513e+06              3.239284\n",
-       "std    8.229500e+05             85.946625\n",
+       "count  8.289340e+05         228801.000000\n",
+       "mean   1.811513e+06              2.166593\n",
+       "std    8.229500e+05             56.351862\n",
        "min    1.493300e+04              0.000000\n",
        "25%    1.286373e+06              0.000000\n",
        "50%    2.012872e+06              0.000000\n",
-       "75%    2.481669e+06              0.990000\n",
-       "max    3.176543e+06          45919.468251"
+       "75%    2.481669e+06              0.000000\n",
+       "max    3.176543e+06           8628.335578"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sub.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "228801"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(preds)"
    ]
   }
  ],
