--- a/Gold Prediction/multimodel_regression.ipynb
+++ b/Gold Prediction/multimodel_regression.ipynb
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 21.6 s\n"
+      "Wall time: 26.8 s\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss: 0.4152026871068508\n",
-      "Wall time: 22 s\n"
+      "RMSE: 85.85807636297329\n",
+      "Wall time: 17.2 s\n"
      ]
     }
    ],
@@ -101,7 +101,8 @@
     "reg = LinearRegression()\n",
     "reg.fit(x_train, y_train)\n",
     "# preds = reg.predict(test_df)\n",
-    "print('Loss: {}'.format(reg.score(x_test,y_test)))"
+    "y_pred = reg.predict(x_test)\n",
+    "print('RMSE: {}'.format(mean_squared_error(y_pred,y_test,multioutput = 'uniform_average')**0.5))"
    ]
   },
   {
@@ -113,24 +114,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "reg2 = Ridge(alpha=1,solver = 'sag')\n",
+    "reg2.fit(x_train, y_train)\n",
+    "# preds = reg2.predict(test_scale)\n",
+    "y_pred = reg2.predict(x_test)\n",
+    "print(reg2.score(x_train, y_train))\n",
+    "print('RMSE: {}'.format(mean_squared_error(y_pred,y_test,multioutput = 'uniform_average')**0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 5 s\n"
+      "RMSE: 88.82965783768701\n",
+      "Wall time: 3min 42s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "from sklearn.linear_model import Ridge\n",
-    "reg2 = Ridge(alpha=3,normalize=True)\n",
-    "reg2.fit(x_train, y_train)\n",
-    "preds = reg2.predict(x_test)\n",
-    "# print('Loss: {}'.format(reg2.score(x_test,y_test)))"
+    "from lightgbm import LGBMRegressor\n",
+    "\n",
+    "reg3 = LGBMRegressor(n_estimators=700,n_jobs=-1)\n",
+    "reg3.fit(x_train, y_train)\n",
+    "# preds = reg2.predict(test_scale)\n",
+    "y_pred = reg3.predict(x_test)\n",
+    "print('RMSE: {}'.format(mean_squared_error(y_pred,y_test,multioutput = 'uniform_average')**0.5))"
    ]
   },
   {
@@ -188,17 +209,17 @@
        "    <tr>\n",
        "      <th>count</th>\n",
        "      <td>8.289340e+05</td>\n",
-       "      <td>228801.000000</td>\n",
+       "      <td>828934.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
        "      <td>1.811513e+06</td>\n",
-       "      <td>2.166593</td>\n",
+       "      <td>2.880217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
        "      <td>8.229500e+05</td>\n",
-       "      <td>56.351862</td>\n",
+       "      <td>61.348869</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -223,7 +244,7 @@
        "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>3.176543e+06</td>\n",
-       "      <td>8628.335578</td>\n",
+       "      <td>15790.062194</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -231,14 +252,14 @@
       ],
       "text/plain": [
        "            user_id  prediction_pay_price\n",
-       "count  8.289340e+05         228801.000000\n",
-       "mean   1.811513e+06              2.166593\n",
-       "std    8.229500e+05             56.351862\n",
+       "count  8.289340e+05         828934.000000\n",
+       "mean   1.811513e+06              2.880217\n",
+       "std    8.229500e+05             61.348869\n",
        "min    1.493300e+04              0.000000\n",
        "25%    1.286373e+06              0.000000\n",
        "50%    2.012872e+06              0.000000\n",
        "75%    2.481669e+06              0.000000\n",
-       "max    3.176543e+06           8628.335578"
+       "max    3.176543e+06          15790.062194"
       ]
      },
      "execution_count": 10,
@@ -258,7 +279,7 @@
     {
      "data": {
       "text/plain": [
-       "228801"
+       "828934"
       ]
      },
      "execution_count": 11,
