--- a/Gold Prediction/multimodel_regression.ipynb
+++ b/Gold Prediction/multimodel_regression.ipynb
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 22.7 s\n"
+      "Wall time: 25.5 s\n"
      ]
     }
    ],
@@ -32,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -48,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 52.7 s\n"
+      "Wall time: 54.8 s\n"
      ]
     }
    ],
@@ -68,24 +70,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cleaning(data):\n",
     "    data.drop(['register_time','user_id'],axis=1,inplace=True)\n",
+    "    data['wood_remain_value'] = data['wood_add_value'] - data['wood_reduce_value']\n",
+    "    data['stone_remain_value'] = data['stone_add_value'] - data['stone_reduce_value']\n",
+    "    data['ivory_remain_value'] = data['ivory_add_value'] - data['ivory_reduce_value']\n",
+    "    data['meat_remain_value'] = data['meat_add_value'] - data['meat_reduce_value']\n",
+    "    data['magic_remain_value'] = data['magic_add_value'] - data['magic_reduce_value']\n",
+    "    data['infantry-remain_value'] = data['infantry_add_value'] - data['infantry_reduce_value']\n",
+    "    data['cavalry-remain_value'] = data['cavalry_add_value'] - data['cavalry_reduce_value']\n",
+    "    data['shaman-remain_value'] = data['shaman_add_value'] - data['shaman_reduce_value']\n",
+    "    data['wound_infantry-remain_value'] = data['wound_infantry_add_value'] - data['wound_infantry_reduce_value']\n",
+    "    data['wound_cavalry-remain_value'] = data['wound_cavalry_add_value'] - data['wound_cavalry_reduce_value']\n",
+    "    data['wound_shaman-remain_value'] = data['wound_shaman_add_value'] - data['wound_shaman_reduce_value']\n",
+    "    data['general_acceleration-remain_value'] = data['general_acceleration_add_value'] - data['general_acceleration_reduce_value']\n",
+    "    data['building_acceleration-remain_value'] = data['building_acceleration_add_value'] - data['building_acceleration_reduce_value']\n",
+    "    data['research_acceleration-remain_value'] = data['reaserch_acceleration_add_value'] - data['reaserch_acceleration_reduce_value']\n",
+    "    data['training_acceleration-remain_value'] = data['training_acceleration_add_value'] - data['training_acceleration_reduce_value']\n",
+    "    data['treatment_acceleration-remain_value'] = data['treatment_acceleraion_add_value'] - data['treatment_acceleration_reduce_value']\n",
+    "    data['pvp_passive'] = data['pvp_battle_count'] - data['pvp_lanch_count']\n",
+    "    data['pvp_lose'] = data['pvp_battle_count'] - data['pvp_win_count']\n",
+    "    data['pve_passive'] = data['pve_battle_count'] - data['pve_lanch_count']\n",
+    "    data['pve_lose'] = data['pve_battle_count'] - data['pve_win_count']\n",
+    "    \n",
+    "#     for i in range(len(data)):\n",
+    "#         if data[i].pay_count != 0:\n",
+    "#             data.iloc[i]['avg_payment'] = data.iloc[i]['pay_price'] / data.iloc[i]['pay_count']\n",
+    "    \n",
     "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = train_df.prediction_pay_price\n",
+    "testid = test_df.user_id\n",
+    "train_df.drop(['prediction_pay_price'],axis=1,inplace = True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1.57 s\n"
+     ]
+    }
+   ],
    "source": [
-    "y = train_df.prediction_pay_price\n",
-    "testid = test_df.user_id\n",
-    "train_df.drop(['prediction_pay_price'],axis=1,inplace = True)\n",
+    "%%time\n",
     "train_df = cleaning(train_df)\n",
     "test_df = cleaning(test_df)"
    ]
@@ -96,10 +140,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "scaler = StandardScaler()\n",
-    "x_train = scaler.fit_transform(train_df)\n",
-    "test_scale = scaler.transform(test_df)"
+    "# from sklearn.preprocessing import StandardScaler\n",
+    "# from sklearn.preprocessing import scale\n",
+    "# scaler = StandardScaler()\n",
+    "# x_train_scale = scaler.fit_transform(train_df)\n",
+    "# test_scale = scaler.transform(test_df)"
    ]
   },
   {
@@ -108,8 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.model_selection import train_test_split\n",
-    "# x_train, x_test, y_train, y_test = train_test_split(train_df, y, test_size = 0.1)"
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(train_df, y, test_size = 0.1)"
    ]
   },
   {
@@ -121,21 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Found input variables with inconsistent numbers of samples: [828934, 228801]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\user\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\regression.py\u001b[0m in \u001b[0;36mmean_squared_error\u001b[1;34m(y_true, y_pred, sample_weight, multioutput)\u001b[0m\n\u001b[0;32m    236\u001b[0m     \"\"\"\n\u001b[0;32m    237\u001b[0m     y_type, y_true, y_pred, multioutput = _check_reg_targets(\n\u001b[1;32m--> 238\u001b[1;33m         y_true, y_pred, multioutput)\n\u001b[0m\u001b[0;32m    239\u001b[0m     output_errors = np.average((y_true - y_pred) ** 2, axis=0,\n\u001b[0;32m    240\u001b[0m                                weights=sample_weight)\n",
-      "\u001b[1;32mc:\\users\\user\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\regression.py\u001b[0m in \u001b[0;36m_check_reg_targets\u001b[1;34m(y_true, y_pred, multioutput)\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m     \"\"\"\n\u001b[1;32m---> 75\u001b[1;33m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     76\u001b[0m     \u001b[0my_true\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m     \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\user\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_consistent_length\u001b[1;34m(*arrays)\u001b[0m\n\u001b[0;32m    202\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muniques\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    203\u001b[0m         raise ValueError(\"Found input variables with inconsistent numbers of\"\n\u001b[1;32m--> 204\u001b[1;33m                          \" samples: %r\" % [int(l) for l in lengths])\n\u001b[0m\u001b[0;32m    205\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    206\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [828934, 228801]"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 39.786080072972766\n",
+      "Wall time: 27.8 s\n"
      ]
     }
    ],
@@ -145,7 +184,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "reg = LinearRegression()\n",
     "reg.fit(x_train, y_train)\n",
-    "preds = reg.predict(test_df)\n",
+    "preds = reg.predict(x_test)\n",
     "# y_pred = reg.predict(x_test)\n",
     "print('RMSE: {}'.format(mean_squared_error(preds,y_test,multioutput = 'uniform_average')**0.5))"
    ]
@@ -159,14 +198,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 3.87 s\n"
+      "RMSE: 39.67349494108412\n",
+      "Wall time: 39.6 s\n"
      ]
     }
    ],
@@ -175,11 +215,18 @@
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.metrics import mean_squared_error\n",
     "reg2 = Ridge(alpha=1,solver = 'auto')\n",
-    "reg2.fit(x_train, y)\n",
-    "# preds = reg2.predict(test_scale)\n",
-    "y_pred = reg2.predict(test_scale)\n",
+    "reg2.fit(x_train, y_train)\n",
+    "preds2 = reg2.predict(x_test)\n",
+    "# y_pred = reg2.predict(test_scale)\n",
     "# print(reg2.score(x_train, y_train))\n",
-    "# print('RMSE: {}'.format(mean_squared_error(y_pred,y_test,multioutput = 'uniform_average')**0.5))"
+    "print('RMSE: {}'.format(mean_squared_error(preds2,y_test,multioutput = 'uniform_average')**0.5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LGBM Regression"
    ]
   },
   {
@@ -191,8 +238,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 77.71513155737912\n",
-      "Wall time: 1min 32s\n"
+      "RMSE: 47.40397345840647\n",
+      "Wall time: 2min 26s\n"
      ]
     }
    ],
@@ -200,18 +247,29 @@
     "%%time\n",
     "from lightgbm import LGBMRegressor\n",
     "\n",
-    "reg3 = LGBMRegressor(n_estimators=400,n_jobs=-1)\n",
+    "reg3 = LGBMRegressor(boosting_type='gbdt',\n",
+    "                     num_leaves=31, max_depth=-1, \n",
+    "                     learning_rate=0.1, n_estimators=n, \n",
+    "                     subsample_for_bin=200000, objective=None,\n",
+    "                     class_weight=None, min_split_gain=0.0, \n",
+    "                     min_child_weight=0.001,\n",
+    "                     min_child_samples=20, subsample=1.0, subsample_freq=1,\n",
+    "                     colsample_bytree=1.0,\n",
+    "                     reg_alpha=0.0, reg_lambda=0.0, random_state=None,\n",
+    "                     n_jobs=-1, silent=True)\n",
     "reg3.fit(x_train, y_train)\n",
-    "# preds = reg2.predict(test_scale)\n",
-    "y_pred2 = reg3.predict(x_test)\n",
-    "print('RMSE: {}'.format(mean_squared_error(y_pred2,y_test,multioutput = 'uniform_average')**0.5))"
+    "preds3 = reg3.predict(x_test)\n",
+    "# y_pred2 = reg3.predict(x_test)\n",
+    "print('RMSE: {}'.format(mean_squared_error(preds3,y_test,multioutput = 'uniform_average')**0.5))"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Output Processing"
+    "output_preds = pd.DataFrame()"
    ]
   },
   {
@@ -220,17 +278,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## output processing\n",
-    "y_pred[y_pred<0.5] = 0\n",
-    "abb = pd.DataFrame(y_pred)\n",
-    "# abb[(abb[0]>0) & (abb[0]<1)] = 0.99\n",
-    "sub = pd.DataFrame({'user_id':testid,'prediction_pay_price': y_pred},columns=['user_id','prediction_pay_price'])\n",
-    "sub.to_csv('output_processed_Ridge.csv',index=None)"
+    "output_preds['linear'] = reg.predict(test_df)\n",
+    "output_preds['Ridge'] = reg2.predict(test_df)\n",
+    "output_preds['Lgbm'] = reg3.predict(test_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = output_preds.Ridge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -254,103 +318,124 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>prediction_pay_price</th>\n",
+       "      <th>linear</th>\n",
+       "      <th>Ridge</th>\n",
+       "      <th>Lgbm</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>8.289340e+05</td>\n",
+       "      <td>828934.000000</td>\n",
+       "      <td>828934.000000</td>\n",
        "      <td>828934.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>1.811513e+06</td>\n",
-       "      <td>3.144904</td>\n",
+       "      <td>2.496951</td>\n",
+       "      <td>2.488366</td>\n",
+       "      <td>2.420275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>8.229500e+05</td>\n",
-       "      <td>85.941143</td>\n",
+       "      <td>88.355121</td>\n",
+       "      <td>88.003515</td>\n",
+       "      <td>76.787754</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>1.493300e+04</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>-661.442235</td>\n",
+       "      <td>-643.111077</td>\n",
+       "      <td>-438.160799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>1.286373e+06</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>-0.406875</td>\n",
+       "      <td>-0.405791</td>\n",
+       "      <td>0.019888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>2.012872e+06</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>-0.057046</td>\n",
+       "      <td>-0.046082</td>\n",
+       "      <td>0.019888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>2.481669e+06</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.567369</td>\n",
+       "      <td>0.551277</td>\n",
+       "      <td>0.019888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>3.176543e+06</td>\n",
-       "      <td>45919.231113</td>\n",
+       "      <td>47831.155635</td>\n",
+       "      <td>47179.416021</td>\n",
+       "      <td>14765.294483</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            user_id  prediction_pay_price\n",
-       "count  8.289340e+05         828934.000000\n",
-       "mean   1.811513e+06              3.144904\n",
-       "std    8.229500e+05             85.941143\n",
-       "min    1.493300e+04              0.000000\n",
-       "25%    1.286373e+06              0.000000\n",
-       "50%    2.012872e+06              0.000000\n",
-       "75%    2.481669e+06              0.000000\n",
-       "max    3.176543e+06          45919.231113"
+       "              linear          Ridge           Lgbm\n",
+       "count  828934.000000  828934.000000  828934.000000\n",
+       "mean        2.496951       2.488366       2.420275\n",
+       "std        88.355121      88.003515      76.787754\n",
+       "min      -661.442235    -643.111077    -438.160799\n",
+       "25%        -0.406875      -0.405791       0.019888\n",
+       "50%        -0.057046      -0.046082       0.019888\n",
+       "75%         0.567369       0.551277       0.019888\n",
+       "max     47831.155635   47179.416021   14765.294483"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sub.describe()"
+    "output_preds.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Output Processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## output processing\n",
+    "# y_pred[y_pred<0.5] = 0\n",
+    "# abb[(abb[0]>0) & (abb[0]<1)] = 0.99\n",
+    "sub = pd.DataFrame({'user_id':testid,'prediction_pay_price': y_pred},columns=['user_id','prediction_pay_price'])\n",
+    "sub.to_csv('output_Ridge.csv',index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'preds' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-8425d50daaed>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpreds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'preds' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "228801"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "len(preds)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
